--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section class="header-wrap d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <div class="header-content p-2 flex-fill bd-highlight">
                         <h1>Reduser dine innkjøpskostnader</h1>
-                        <h4>Vi hjelper deg med å optimaliser dine innkjøp ved hjelp av vårt verktøy Ignite Analytics og våre konsulenter som er eksperter på strategiske innkjøp</h4>
+                        <h4>Vi hjelper deg med å optimalisere dine innkjøp ved hjelp av vårt verktøy Ignite Analytics og våre konsulenter som er eksperter på strategiske innkjøp</h4>
                         <a href="ignite-analytics"><button type="button" class="btn btn-primary btn-lg">Finn ut mer</button></a>
                         <a href="https://meetings.hubspot.com/borge-langedal" target="blank"><button type="button" class="btn btn-outline-primary">Book Demo</button></a>
                     </div>
