--- a/ignite-academy/index.html
+++ b/ignite-academy/index.html
@@ -109,7 +109,7 @@
         <div class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <div class="header-content p-2 flex-fill bd-highlight">
                         <h1><span style="color:#18243F;">Ignite</span> <span style="color:#31B096;">Academy</span></h1>
-                        <h4>Få skreddersydd støtte til å optimalisere innkjøpene til din virksomhet fra våre erfarne konsulenter​</h4>
+                        <h4>Bli inspirert og videreutvikle din ekspertise gjennom våre videoer og tilpassede kurs innenfor strategisk innkjøp</h4>
                         <ul class="services_list fa-ul">
                           <li><span class="fa-li green"><i class="fas fa-award"></i></span>Best practice tips og triks</li>
                           <li><span class="fa-li green"><i class="fas fa-play-circle"></i></span>Online video tutorials​</li>
