--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <svg height="50" width="15%">
                   <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                 </svg>
-                <h4 class="arrow">VÅRT TILBUD</h4>
+                <h4 class="arrow">VÅRE TJENESTER</h4>
               </div> 
               
           <!-- MAIN--->  
@@ -184,7 +184,7 @@
                   <figure class="service_illustration">
                       <img src="images/logoer/logo-academy-standard.svg" alt="Ignite Analytics logo">
                   </figure>
-                  <h4 class="service_title">Bli inspirert og videreutvikle din ekspertise gjennom våre online videoer, webinarer og tilpassede kurs innenfor strategisk innkjøp</h4>
+                  <h4 class="service_title">Bli inspirert og videreutvikle din ekspertise gjennom våre videoer og tilpassede kurs innenfor strategisk innkjøp</h4>
                   <ul class="services_list fa-ul">
                       <li><span class="fa-li green"><i class="fas fa-award"></i></span>Best practice tips og triks</li>
                       <li><span class="fa-li green"><i class="fas fa-play-circle"></i></span>Online video tutorials​</li>
