accademy text update

--- a/en/ignite-academy/index.html
+++ b/en/ignite-academy/index.html
@@ -110,7 +110,7 @@
         <div class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <div class="header-content p-2 flex-fill bd-highlight">
                         <h1><span style="color:#18243F;">Ignite</span> <span style="color:#31B096;">Academy</span></h1>
-                        <h4>Get inspired and deepen your procurement expertise through our online videos, webinars and courses within strategic sourcing topics</h4>
+                        <h4>Get inspired and strengthen your expertise through our videos and custom training courses within strategic sourcing</h4>
                         <ul class="services_list fa-ul">
                           <li><span class="fa-li green"><i class="fas fa-award"></i></span>Best practice tips and tricks</li>
                           <li><span class="fa-li green"><i class="fas fa-play-circle"></i></span>Online video tutorials​</li>
