--- a/en/index.html
+++ b/en/index.html
@@ -177,7 +177,7 @@
                   <figure class="service_illustration">
                     <img src="../images/logoer/logo-academy-standard.svg" alt="Ignite Analytics logo">
                   </figure>
-                  <h4 class="service_title">Get inspired and deepen your procurement expertise through our online videos, webinars and courses within strategic sourcing topics</h4>
+                  <h4 class="service_title">Get inspired and strengthen your expertise through our videos and custom training courses within strategic sourcing</h4>
                   <ul class="services_list fa-ul">
                       <li><span class="fa-li green"><i class="fas fa-award"></i></span>Best practice tips and tricks</li>
                       <li><span class="fa-li green"><i class="fas fa-play-circle"></i></span>Online video tutorials​</li>
