--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                   </figure>
                   <h4 class="service_title">Bli inspirert og videreutvikle din ekspertise gjennom våre videoer og tilpassede kurs innenfor strategisk innkjøp</h4>
                   <ul class="services_list fa-ul">
-                      <li><span class="fa-li green"><i class="fas fa-award"></i></span>Best practice tips og triks</li>
-                      <li><span class="fa-li green"><i class="fas fa-play-circle"></i></span>Online video tutorials​</li>
+                      <li><span class="fa-li green"><i class="fas fa-award"></i></span>Beste praksis tips og triks</li>
+                      <li><span class="fa-li green"><i class="fas fa-play-circle"></i></span>Online videoopplæring</li>
                       <li><span class="fa-li green"><i class="fas fa-indent"></i></span>Webinarer</li> 
                       <li><span class="fa-li green"><i class="fas fa-chalkboard-teacher"></i></span>Kurs</li>          
                      
