--- a/en/ignite-services/index.html
+++ b/en/ignite-services/index.html
@@ -108,7 +108,7 @@
         <div class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <div class="header-content p-2 flex-fill bd-highlight">
                         <h1><span style="color:#18243F;">Ignite</span> <span style="color:#ebaf41;">Services</span></h1>
-                        <h4>Our experienced consultants are available to support your business optimizing external spend</h4>
+                        <h4>Get tailored support to optimize your external spend from our experienced consultants</h4>
                         <ul class="services_list fa-ul">
                             <li><span class="fa-li yellow"><i class="fas fa-hand-holding-usd"></i></span>Savings realization</li>
                             <li><span class="fa-li yellow"><i class="fas fa-sitemap"></i></span>Organizational development</li>
