--- a/en/index.html
+++ b/en/index.html
@@ -198,7 +198,7 @@
                     <figure class="service_illustration">
                       <img src="../images/logoer/logo-services-standard.svg" alt="Ignite Analytics logo">
                     </figure>
-                    <h4 class="service_title">Our experienced consultants are available to support your business optimizing external spend</h4>
+                    <h4 class="service_title">Get tailored support to optimize your external spend from our experienced consultants</h4>
                     <ul class="services_list fa-ul">
                         <li><span class="fa-li yellow"><i class="fas fa-hand-holding-usd"></i></span>Savings realization</li>
                         <li><span class="fa-li yellow"><i class="fas fa-sitemap"></i></span>Organizational development</li>
