text update jobb hos oss

--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -346,7 +346,7 @@
           </div>
           <div class="work-content p-2 flex-fill bd-highlight">
             <h2>Har du lyst til å jobbe med oss?</h2>
-            <h4 class="blue">Vi ønsker deg som kan styrke vårt team innen konsulenttjenester eller programvareutvikling til drift og videreutvikling av vårt software</h4>
+            <h4 class="blue">Vi ønsker å komme i kontakt med personer som kan styrke vårt team innen konsulenttjenester eller programvareutvikling av vår software</h4>
             <a href="../karriere/"><button type="button" class="work-with-us btn btn-outline-primary">Ledige stillinger</button></a>
           </div>
         </div>
