--- a/en/about/index.html
+++ b/en/about/index.html
@@ -344,9 +344,9 @@ data-reactid=".hbspt-forms-4">
             <img src="../../images/work.svg" alt="har du lyst til å jobbe med oss?" width="100%">
           </div>
           <div class="work-content p-2 flex-fill bd-highlight">
-            <h2>We are growing</h2>
-            <h4 class="blue">VWe are experiencing increased demand for our services and are searching to get in touch with potential new colleagues.</h4>
-            <a href="../career/"><button type="button" class="work-with-us btn btn-outline-primary">Jobs</button></a>
+            <h2>Would you like to work with us?</h2>
+            <h4 class="blue">We want to get in touch with people who can strengthen our team within consulting services or software development</h4>
+            <a href="../career/"><button type="button" class="work-with-us btn btn-outline-primary">Vacancies</button></a>
           </div>
         </div>
 
