changed text ignite analytics

--- a/en/ignite-analytics/index.html
+++ b/en/ignite-analytics/index.html
@@ -159,8 +159,8 @@
                         <img class="main-content-img" src="../../images/overview.svg" alt="Overview image" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Full spend transparency and deep insight</h3>
-                        <h4>Within minutes, Ignite Analytics will provide full overview of your spend composition and development, either with our standard analyses or custom reports</h4>
+                        <h3 class="blue">Full spend transparency and deep insight</h3>
+                        <h4>Within minutes, Ignite Analytics provides you full overview of your spend composition and development, either through our standard analyses or your custom reports</h4>
                       </div>
                   </section>
 
@@ -169,7 +169,7 @@
                         <img src="../../images/risk2.svg" alt="risk image" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Automatic identification of opportunities and risks</h3>
+                        <h3 class="blue">Automatic identification of opportunities and risks</h3>
                         <h4>Intelligent data enrichment enables you to identify the largest opportunities and risks in your supplier base</h4>
                       </div>
                   </section>
@@ -178,8 +178,8 @@
                         <img src="../../images/setup.svg" alt="implement image" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Easy implementation of improvement measures</h3>
-                        <h4>Renegotiations and tender processes based on a battle-proven apporach are ready for efficient implementation</h4>
+                        <h3 class="blue">Easy implementation of improvement measures</h3>
+                        <h4>Renegotiations and tender processes based on a battle-proven approach are ready for efficient implementation</h4>
                       </div>
                   </section>
                   <section class=" main wrap d-flex bd-highlight flex-column flex-md-row-reverse align-items-center">
@@ -187,8 +187,8 @@
                         <img src="../../images/spend.svg" alt="spend image" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Seemless and rigorous ​tracking of spend development</h3>
-                        <h4>Our KPI-dashboard accompanied with flexible contract management provides all you need for systematical tracking of spend, suppliers and agreements</h4>
+                        <h3 class="blue">Seamless and rigorous ​tracking of spend development</h3>
+                        <h4>Our KPI-dashboard accompanied by our flexible contract management module provides you with all you need to systematically track spend, suppliers and contracts</h4>
                       </div>
                   </section>
             
@@ -199,7 +199,7 @@
                 <svg height="50" width="15%">
                   <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                 </svg>
-                <h4 class="arrow">Some of our clients</h4>
+                <h4 class="arrow">Selected customers</h4>
 
               </div>
 
