--- a/ignite-analytics/index.html
+++ b/ignite-analytics/index.html
@@ -167,7 +167,7 @@
                         <img class="main-content-img" src="../images/overview.svg" alt="oversikt bilde" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Full oversikt og dyp innsikt i innkjøpet</h3>
+                        <h3 class="blue">Full oversikt og dyp innsikt i innkjøpet</h3>
                         <h4>På få minutter gir Ignite Analytics deg full oversikt over innkjøpets sammensetning og utvikling, 
                             enten gjennom våre standardanalyser eller dine egendefinerte rapporter​</h4>
                       </div>
@@ -178,7 +178,7 @@
                         <img src="../images/risk2.svg" alt="risiko bilde" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Automatisk identifikasjon av muligheter og risikoer</h3>
+                        <h3 class="blue">Automatisk identifikasjon av muligheter og risikoer</h3>
                         <h4>Med intelligent databerikelse kan du umiddelbart identifisere de største mulighetene og risikoene i din leverandørbase​</h4>
                       </div>
                   </section>
@@ -187,7 +187,7 @@
                         <img src="../images/setup.svg" alt="implementering bilde" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Enkel implementering ​av forbedringstiltak</h3>
+                        <h3 class="blue">Enkel implementering ​av forbedringstiltak</h3>
                         <h4>Reforhandlinger og forespørselsprosesser basert på en velprøvd tilnærming er klare til å implementeres enkelt og effektivt​</h4>
                       </div>
                   </section>
@@ -196,7 +196,7 @@
                         <img src="../images/spend.svg" alt="spend bilde" width="80%">
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
-                        <h3>Sømløs og kompromissløs ​oppfølging av innkjøpet</h3>
+                        <h3 class="blue">Sømløs og kompromissløs ​oppfølging av innkjøpet</h3>
                         <h4>Vårt KPI-dashboard og tilhørende konktraktstyringsmodul gir deg alt du trenger for å systematisk følge opp kjøpet, leverandører og avtaler​</h4>
                       </div>
                   </section>
@@ -208,7 +208,7 @@
                 <svg height="50" width="15%">
                   <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                 </svg>
-                <h4 class="arrow">Noen av våre kunder</h4>
+                <h4 class="arrow">Utvalgte kunder</h4>
 
               </div>
 
