Text update ignite services

--- a/en/ignite-services/index.html
+++ b/en/ignite-services/index.html
@@ -176,7 +176,7 @@
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
                         <h3 style="color: #ebaf41;">Organizational development</h3>
-                        <h4>We have deep experience from assessing, re-designing and implementing new procurement organizations and principles​</h4>
+                        <h4>We have broad experience from assessing, re-designing and implementing new procurement organizations and principles</h4>
                       </div>
                   </section>
                   <section class=" main wrap d-flex bd-highlight flex-column flex-md-row align-items-center">
@@ -185,7 +185,7 @@
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
                         <h3 style="color: #ebaf41;">Process optimization​</h3>
-                        <h4>Our counsultants have broad experience from securing involvement, exploiting internal expertise and facilitating transparency through clearly defining and anchoring improved procurement processes​</h4>
+                        <h4>Our consultants have strong experience from securing involvement, exploiting internal expertise and facilitating transparency through clearly defining and anchoring improved procurement processes​</h4>
                       </div>
                   </section>
         
@@ -196,7 +196,7 @@
                   <svg height="50" width="15%">
                     <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                   </svg>
-                  <h4 class="arrow">Contribution</h4>
+                  <h4 class="arrow">We have contributed to</h4>
   
                 </div>          
 
@@ -235,7 +235,7 @@
         <svg height="50" width="15%">
           <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
         </svg>
-        <h4 class="arrow">Clients</h4>
+        <h4 class="arrow">Selected customers</h4>
       </div>  
 
 <!-- Client-Logo-list--->         
