--- a/ignite-services/index.html
+++ b/ignite-services/index.html
@@ -115,7 +115,8 @@
                         <ul class="services_list fa-ul">
                             <li><span class="fa-li yellow"><i class="fas fa-hand-holding-usd"></i></span>Realisering av besparelser​</li>
                             <li><span class="fa-li yellow"><i class="fas fa-sitemap"></i></span>Utvikling av innkjøpsorganisasjon​</li>
-                            <li><span class="fa-li yellow"><i class="fas fa-chart-line"></i></span>Forbedring av prosesser​</li>          
+                            <li><span class="fa-li yellow"><i class="fas fa-chart-line"></i></span>Forbedring av prosesser​</li>  
+                            <li><span class="fa-li yellow"><i class="fas fa-list-alt"></i></span>Og mye mer</li>         
                            
                           </ul>
                         <a><button type="button" class="btn btn-primary btn-lg yellow " data-toggle="modal" data-target="#modalbook">Book et møte</button></a> 
@@ -173,7 +174,7 @@
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
                         <h3 style="color: #ebaf41;">Realisering av besparelser​</h3>
-                        <h4>Basert på vårt rammeverk med 8 spaker for reduserte innkjøpskostnader, har vi støttet kunder på tvers av en rekke industrier å realisere betydelige besparelser​</h4>
+                        <h4>Gjennom vårt rammeverk med 8 spaker for reduserte innkjøpskostnader, har vi støttet kunder på tvers av en rekke industrier å realisere betydelige besparelser </h4>
                       </div>
                   </section>
 
@@ -192,7 +193,7 @@
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
                         <h3 style="color: #ebaf41;">Forbedring av prosesser​</h3>
-                        <h4>Våre konsulenter har dyp erfaring med å sikre involvering, utnyttelse av intern ekspertise og legge til rette for transparens gjennom forbedrede, klart definerte og forankrede innkjøpsprosesser</h4>
+                        <h4>Våre konsulenter har god erfaring med å sikre involvering, utnyttelse av intern ekspertise og legge til rette for transparens gjennom forbedrede, klart definerte og forankrede innkjøpsprosesser</h4>
                       </div>
                   </section>
         
