--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -107,7 +107,7 @@
         <div class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center justify-content-between">
                 <div class="header-content p-2 flex-fill bd-highlight">
                     <h1>Om oss</h1>
-                    <h4>Ignite Procurement ble startet opp i 2016, og springer ut fra grunnleggernes felles erfaring fra the Boston Consulting Group (BCG). Vi er et SaaS-selskap med et klart formål – å legge til rette for profesjonelle innkjøpere å realisere betydelige bunnlinjeeffekter gjennom digitale verktøy, trening og dedikert støtte</h4>
+                    <h4>Ignite Procurement ble startet opp i 2016, og springer ut fra grunnleggernes felles erfaring fra the Boston Consulting Group (BCG). Vi er et SaaS-selskap med et klart formål – å legge til rette for våre kunder å realisere betydelige bunnlinjeeffekter gjennom digitale verktøy, trening og dedikert støtte</h4>
                 </div>
                 <div class="header-content-img p-2 flex-fill bd-highlight">
                   <img src="../images/team.jpg" alt="Teambilde" width="90%">
@@ -122,18 +122,18 @@
                   <svg height="50" width="15%">
                     <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                   </svg>
-                  <h4 class="arrow">HVA VI TILBYR</h4>
+                  <h4 class="arrow">VÅRE TJENESTER</h4>
                 </div> 
                 
                <section class=" wrap content">
                 <div class="col-md-6">
-                  <h4 class="blue-bold">Ignite Analytics</h4>
+                  <h4 class="bold">Ignite <span style="color:#3c6fe9;">Analytics</h4>
                     <p>Ignite Analytics, vår digitale plattform for strategisk innkjøp, er grunnmuren i vårt tilbud. Ved å kombinere ny teknologi med en velprøvd tilnærming støtter vår løsning hele den strategiske anskaffelsesprosessen – fra analyse, identifikasjon av muligheter og risikoer til implementering og oppfølging.​
                     </p>
-                    <h4 class="blue-bold">Ignite Academy</h4>
+                    <h4 class="bold">Ignite <span style="color:#31B096;">Academy</h4>
                     <p>Med Ignite Academy tilbyr vi også våre beste tips & råd, online videoer, webinarer og tilpassede kurs for inspirasjon og kompetanseutvikling.​
                     </p>
-                    <h4 class="blue-bold">Ignite Services</h4>
+                    <h4 class="bold">Ignite <span style="color:#ebaf41;">Services</h4>
                     <p>Med Ignite Services er våre erfarne eksperter klare til å støtte din virksomhet å oppnå deres mål innenfor innkjøp. ​
                     </p>
                     <p>Å adressere innkjøp gjennom en systematisk og analytisk tilnærming er for de fleste selskaper den raskeste og mest bærekraftige måten å realisere betydelige bunnlinjeeffekter på. Med vårt tilbud, mener vi det aldri har vært enklere å forbedre bunnlinjen.</p>
@@ -154,9 +154,7 @@
         </div>         
 
    <!-- TEAM-BLOCK--->      
-   <div class="heading-wrap wrap">
-      <h2 class="">Team</h2>
-  </div>    
+   
    <section class="team wrap d-flex p-2 flex-wrap justify-content-between">
      <div class="main-contact d-inline-flex p-2 flex-column">
         <img class="contact" src="../../images/team/Sigbjørn_Nome.jpg" alt="Partner" width="250px" height="250px">
@@ -171,7 +169,7 @@
          <img class="contact" src="../../images/team/Børge_Kvalheim_Langedal.jpg" alt="Partner" width="250px" height="250px">
          <div class="main-contact-info">
            <h4 class="blue-bold">Børge Langedal</h4>
-           <h4 class="title">Sales & Marketing Director​</h4>
+           <h4 class="title">Sales Director</h4>
            <a class="phoneto" href="tel:+47 992 38 391"><i class="fas fa-phone"></i>+47 992 38 391</a>
            <a class="mailto" href="mailto:borge.langedal@ignite.no"><i class="fas fa-envelope"></i></i>borge.langedal@ignite.no</a>
          </div>
@@ -189,7 +187,7 @@
            <img class="contact" src="../../images/team/Frank_Willie_Bødal.jpg" alt="Partner" width="250px" height="250px">
            <div class="main-contact-info">
              <h4 class="blue-bold">Frank-Willie Bødal</h4>
-             <h4 class="title">Customer Success Director​</h4>
+             <h4 class="title">Marketing Director</h4>
              <a class="phoneto" href="tel:+47 952 60 850"><i class="fas fa-phone"></i>+47 952 60 850</a>
              <a class="mailto" href="mailto:frank.bodal@ignite.no"><i class="fas fa-envelope"></i></i>frank.bodal@ignite.no</a>
            </div>
