--- a/en/about/index.html
+++ b/en/about/index.html
@@ -108,7 +108,7 @@
         <div class="header-wrap d-flex bd-highlight flex-column flex-lg-row align-items-center justify-content-between">
                 <div class="header-content p-2 flex-fill bd-highlight">
                     <h1>About us</h1>
-                    <h4>Founded in 2016 by former management consultants in the Boston Consulting Group (BCG), Ignite Procurement is a SaaS company with a clear mission – to enable procurement professionals to realize significant bottom line effects through digital tools, training and</h4>
+                    <h4>Founded in 2016 by former management consultants in the Boston Consulting Group (BCG), Ignite Procurement is a SaaS company with a clear mission – to enable our customers to realize significant bottom line effects through digital solutions, training and dedicated support</h4>
                 </div>
                 <div class="header-content-img p-2 flex-fill bd-highlight">
                   <img src="../../images/team.jpg" alt="Team image" width="90%">
@@ -123,16 +123,16 @@
                   <svg height="50" width="15%">
                     <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                   </svg>
-                  <h4 class="arrow">HVA VI TILBYR</h4>
+                  <h4 class="arrow">OUR SERVICES</h4>
                 </div> 
                 
                <section class=" wrap content">
                 <div class="col-md-6">
-                  <h4 class="blue-bold">Ignite Analytics</h4>
+                  <h4 class="bold">Ignite <span style="color:#3c6fe9;">Analytics</h4>
                     <p>Our digital platform for strategic procurement, represents the cornerstone of our offering. Combining new technology with a battle-proven approach, our unique solution supports the full strategic procurement cycle – from spend analysis, identification of opportunities and risks, implementation and tracking.​</p>
-                    <h4 class="blue-bold">Ignite Academy</h4>
+                    <h4 class="bold">Ignite <span style="color:#31b096;">Academy</h4>
                     <p>We also provide the best practice tips & tricks, online video tutorials, webinars and classroom courses for inspiration and capability development.​</p>
-                    <h4 class="blue-bold">Ignite Services</h4>
+                    <h4 class="bold">Ignite <span style="color:#ebaf41;">Services</h4>
                     <p>Med Ignite Services er våre erfarne eksperter klare til å støtte din virksomhet å oppnå deres mål innenfor innkjøp. ​
                     </p>Our experienced procurement experts are ready to support your organization achieve your procurement targets. ​</p>
                   </div>
@@ -152,9 +152,7 @@
         </div>         
 
    <!-- TEAM-BLOCK--->      
- <div class="heading-wrap wrap">
-    <h2 class="">Team</h2>
-</div>    
+  
  <section class="team wrap d-flex p-2 flex-wrap justify-content-between">
    <div class="main-contact d-inline-flex p-2 flex-column">
       <img class="contact" src="../../images/team/Sigbjørn_Nome.jpg" alt="Partner" width="250px" height="250px">
@@ -169,7 +167,7 @@
        <img class="contact" src="../../images/team/Børge_Kvalheim_Langedal.jpg" alt="Partner" width="250px" height="250px">
        <div class="main-contact-info">
          <h4 class="blue-bold">Børge Langedal</h4>
-         <h4 class="title">Sales & Marketing Director​</h4>
+         <h4 class="title">Sales Director</h4>
          <a class="phoneto" href="tel:+47 992 38 391"><i class="fas fa-phone"></i>+47 992 38 391</a>
          <a class="mailto" href="mailto:borge.langedal@ignite.no"><i class="fas fa-envelope"></i></i>borge.langedal@ignite.no</a>
        </div>
@@ -187,7 +185,7 @@
          <img class="contact" src="../../images/team/Frank_Willie_Bødal.jpg" alt="Partner" width="250px" height="250px">
          <div class="main-contact-info">
            <h4 class="blue-bold">Frank-Willie Bødal</h4>
-           <h4 class="title">Customer Success Director​</h4>
+           <h4 class="title">Marketing Director </h4>
            <a class="phoneto" href="tel:+47 952 60 850"><i class="fas fa-phone"></i>+47 952 60 850</a>
            <a class="mailto" href="mailto:frank.bodal@ignite.no"><i class="fas fa-envelope"></i></i>frank.bodal@ignite.no</a>
          </div>
