--- a/index.html
+++ b/index.html
@@ -324,43 +324,46 @@
       </section>---> 
       
 
-
-      <section class="newsletter wrap">
-          <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
-          <div class="newsletter-content">
-              <h2>Motta Nyhetsbrev</h2>
-             <h4>Få siste nytt om våre produkter, tjenester og eventer</h4>
-          </div>  
-
-      <form novalidate="" accept-charset="UTF-8" action="https://forms.hsforms.com/submissions/v3/public/submit/formsnext/multipart/4304957/506acf1b-d291-445a-892e-986cbe5d21a4" enctype="multipart/form-data" id="hsForm_506acf1b-d291-445a-892e-986cbe5d21a4"
-method="POST" class="hs-form stacked hs-form-private hs-form-506acf1b-d291-445a-892e-986cbe5d21a4_4d5dc3b7-4c1d-4ccc-8c7d-551a2616d2a7" data-form-id="506acf1b-d291-445a-892e-986cbe5d21a4" data-portal-id="4304957" target="target_iframe_506acf1b-d291-445a-892e-986cbe5d21a4"
-data-reactid=".hbspt-forms-3">
-    <div class="form-group hs_email hs-email hs-fieldtype-text field hs-form-field" data-reactid=".hbspt-forms-3.1:$0">
-        <label id="label-email-506acf1b-d291-445a-892e-986cbe5d21a4" class="" placeholder="Enter your Email" for="email-506acf1b-d291-445a-892e-986cbe5d21a4" data-reactid=".hbspt-forms-3.1:$0.0"><span data-reactid=".hbspt-forms-3.1:$0.0.0">Email</span><span class="hs-form-required" data-reactid=".hbspt-forms-3.1:$0.0.1">*</span>
+<section class="newsletter wrap">
+    <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+    <div class="newsletter-content">
+        <h2>Motta Nyhetsbrev</h2>
+       <h4>Få siste nytt om våre produkter, tjenester og eventer</h4>
+    </div> 
+<form novalidate="" accept-charset="UTF-8" action="https://forms.hsforms.com/submissions/v3/public/submit/formsnext/multipart/4304957/b46283cb-637c-46a5-8b9c-4cb06bc46bd3" enctype="multipart/form-data" id="hsForm_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
+method="POST" class="hs-form stacked hs-form-private hs-form-b46283cb-637c-46a5-8b9c-4cb06bc46bd3_d3422c93-a8fe-4b31-817f-2d638f727dff" data-form-id="b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-portal-id="4304957" target="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
+data-reactid=".hbspt-forms-5">
+    <div class="form-group hs_email hs-email hs-fieldtype-text field hs-form-field" data-reactid=".hbspt-forms-5.1:$0">
+        <label id="label-email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="" placeholder="Enter your E-post" for="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-reactid=".hbspt-forms-5.1:$0.0"><span data-reactid=".hbspt-forms-5.1:$0.0.0">E-post</span><span class="hs-form-required" data-reactid=".hbspt-forms-5.1:$0.0.1">*</span>
         </label>
-        <legend class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-3.1:$0.1"></legend>
-        <div class="input" data-reactid=".hbspt-forms-3.1:$0.$email">
-            <input id="email-506acf1b-d291-445a-892e-986cbe5d21a4" class="hs-input form-control" type="email" name="email" required="" placeholder="Enter email" value="" autocomplete="email" data-reactid=".hbspt-forms-3.1:$0.$email.0">
+        <legend class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-5.1:$0.1"></legend>
+        <div class="input" data-reactid=".hbspt-forms-5.1:$0.$email">
+            <input id="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="hs-input form-control" type="email" name="email" required="" placeholder="Skriv e-post" value="test@ignite.no" autocomplete="email" data-reactid=".hbspt-forms-5.1:$0.$email.0">
         </div>
     </div>
-    <noscript data-reactid=".hbspt-forms-3.2"></noscript>
-    <div class="hs_submit hs-submit" data-reactid=".hbspt-forms-3.5">
-        <div class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-3.5.0"></div>
-        <div class="actions" data-reactid=".hbspt-forms-3.5.1">
-            <input type="submit" value="Sign me up" class="hs-button primary large btn btn-primary" data-reactid=".hbspt-forms-3.5.1.0">
+    <div class="legal-consent-container" data-reactid=".hbspt-forms-5.2">
+        <div class="hs-richtext" data-reactid=".hbspt-forms-5.2.2">
+            <p>Når du klikker på meld meg på nedenfor, gir du tillatelse til at Ignite Procurement kan lagre og behandle de personlige opplysningene som ble sendt ovenfor for å gi forespurt innhold. Du kan stoppe abonnementet på denne informasjonen når som
+                helst. Hvis du vil vite mer om hvordan du stopper abonnement, vennligst se vår <a class="inline" href="https://www.ignite.no/personvernerkl%C3%A6ring/" target="_blank">Personvernerklæring</a>.</p>
         </div>
     </div>
-    <noscript data-reactid=".hbspt-forms-3.6"></noscript>
-    <input name="hs_context" type="hidden" value="{&quot;rumScriptExecuteTime&quot;:1577.6800000021467,&quot;rumServiceResponseTime&quot;:99548.15500001132,&quot;rumFormRenderTime&quot;:1.1249999952269718,&quot;rumTotalRenderTime&quot;:99549.45500000031,&quot;rumTotalRequestTime&quot;:151.83499999693595,&quot;lang&quot;:&quot;en&quot;,&quot;pageUrl&quot;:&quot;https://www.zenpilot.com/blog/how-to-integrate-hubspot-forms-with-leadpages&quot;,&quot;pageTitle&quot;:&quot;How to Integrate HubSpot Forms with LeadPages&quot;,&quot;source&quot;:&quot;FormsNext-static-3.193&quot;,&quot;timestamp&quot;:1550828062657,&quot;userAgent&quot;:&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.109 Safari/537.36&quot;,&quot;originalEmbedContext&quot;:{&quot;portalId&quot;:&quot;4304957&quot;,&quot;formId&quot;:&quot;506acf1b-d291-445a-892e-986cbe5d21a4&quot;,&quot;target&quot;:&quot;#hbspt-form-1550828062567-4276736054&quot;,&quot;hutk&quot;:&quot;2c66f16397bfecce620d7d67bd92aa72&quot;,&quot;canonicalUrl&quot;:&quot;https://www.zenpilot.com/blog/how-to-integrate-hubspot-forms-with-leadpages&quot;,&quot;contentType&quot;:&quot;blog-post&quot;,&quot;pageId&quot;:&quot;1636638185&quot;},&quot;pageId&quot;:&quot;1636638185&quot;,&quot;formTarget&quot;:&quot;#hbspt-form-1550828062567-4276736054&quot;,&quot;correlationId&quot;:&quot;94f6c937-206a-4fcc-b771-2b42a1a5c8fa&quot;,&quot;contentType&quot;:&quot;blog-post&quot;,&quot;hutk&quot;:&quot;2c66f16397bfecce620d7d67bd92aa72&quot;}"
-    data-reactid=".hbspt-forms-3.7">
-    <iframe name="target_iframe_506acf1b-d291-445a-892e-986cbe5d21a4" style="display:none;" data-reactid=".hbspt-forms-3.8"></iframe>
+    <div class="hs_submit hs-submit" data-reactid=".hbspt-forms-5.5">
+        <div class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-5.5.0"></div>
+        <div class="actions" data-reactid=".hbspt-forms-5.5.1">
+            <input type="submit" value="Meld meg på" class="hs-button btn btn-primary" data-reactid=".hbspt-forms-5.5.1.0">
+        </div>
+    </div>
+    <noscript data-reactid=".hbspt-forms-5.6"></noscript>
+    <input name="hs_context" type="hidden" value="{&quot;rumScriptExecuteTime&quot;:1577.6800000021467,&quot;rumServiceResponseTime&quot;:10769037.840000004,&quot;rumFormRenderTime&quot;:0.8049999885261059,&quot;rumTotalRenderTime&quot;:10769038.744999997,&quot;rumTotalRequestTime&quot;:151.69999998807907,&quot;lang&quot;:&quot;noNO&quot;,&quot;legalConsentOptions&quot;:&quot;{\&quot;legitimateInterestSubscriptionTypes\&quot;:[4668905,4834038],\&quot;communicationConsentCheckboxes\&quot;:[{\&quot;communicationTypeId\&quot;:4668905,\&quot;label\&quot;:\&quot;Jeg godtar å motta annen kommunikasjon fra Ignite.\&quot;,\&quot;required\&quot;:false}],\&quot;legitimateInterestLegalBasis\&quot;:\&quot;LEGITIMATE_INTEREST_PQL\&quot;,\&quot;communicationConsentText\&quot;:\&quot;Ignite forplikter seg til å beskytte og respektere ditt personvern, og vi vil bruke personlige opplysninger kun til å administrere kontoen din og gi de produktene og tjenestene som du har bedt om. Fra tid til annen vil vi gjerne ta kontakt om våre produkter og tjenester samt annet innhold som kan være av interesse. Hvis du samtykker i at vi kan ta kontakt til dette formålet, kan du krysse av nedenfor for å si hvordan du ønsker at vi skal ta kontakt:\&quot;,\&quot;processingConsentType\&quot;:\&quot;IMPLICIT\&quot;,\&quot;processingConsentText\&quot;:\&quot;For å kunne gi deg det forespurte innholdet må vi lagre og behandle dine personlige opplysninger. Merk av nedenfor hvis du tillater at vi oppbevare dine personlige opplysninger til dette formålet.\&quot;,\&quot;processingConsentCheckboxLabel\&quot;:\&quot;Jeg tillater at Ignite kan lagre og behandle mine personopplysninger.\&quot;,\&quot;privacyPolicyText\&quot;:\&quot;<p>Når du klikker på meld meg på nedenfor, gir du tillatelse til at Ignite Procurement kan lagre og behandle de personlige opplysningene som ble sendt ovenfor for å gi forespurt innhold. Du kan stoppe abonnementet på denne informasjonen når som helst. Hvis du vil vite mer om hvordan du stopper abonnement, vennligst se vår <a href=\\\&quot;https://www.ignite.no/personvernerkl%C3%A6ring/\\\&quot; target=\\\&quot;_blank\\\&quot;>Personvernerklæring</a>.</p>\&quot;,\&quot;isLegitimateInterest\&quot;:true}&quot;,&quot;pageUrl&quot;:&quot;https://www.zenpilot.com/blog/how-to-integrate-hubspot-forms-with-leadpages&quot;,&quot;pageTitle&quot;:&quot;How to Integrate HubSpot Forms with LeadPages&quot;,&quot;source&quot;:&quot;FormsNext-static-3.193&quot;,&quot;timestamp&quot;:1550838854031,&quot;userAgent&quot;:&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.109 Safari/537.36&quot;,&quot;originalEmbedContext&quot;:{&quot;portalId&quot;:&quot;4304957&quot;,&quot;formId&quot;:&quot;b46283cb-637c-46a5-8b9c-4cb06bc46bd3&quot;,&quot;target&quot;:&quot;#hbspt-form-1550838853950-7286643058&quot;,&quot;hutk&quot;:&quot;2c66f16397bfecce620d7d67bd92aa72&quot;,&quot;canonicalUrl&quot;:&quot;https://www.zenpilot.com/blog/how-to-integrate-hubspot-forms-with-leadpages&quot;,&quot;contentType&quot;:&quot;blog-post&quot;,&quot;pageId&quot;:&quot;1636638185&quot;},&quot;pageId&quot;:&quot;1636638185&quot;,&quot;formTarget&quot;:&quot;#hbspt-form-1550838853950-7286643058&quot;,&quot;correlationId&quot;:&quot;c369e3d1-9f59-4b30-b0e5-291df5b8a6a2&quot;,&quot;contentType&quot;:&quot;blog-post&quot;,&quot;hutk&quot;:&quot;2c66f16397bfecce620d7d67bd92aa72&quot;}"
+    data-reactid=".hbspt-forms-5.7">
+    <iframe name="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3" style="display:none;" data-reactid=".hbspt-forms-5.8"></iframe>
 </form>
-
 <div class="social-media-icons">
     <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
     <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
   </div> 
 </section>
+
 
 
 
