--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="icon" type="image/png" href="images/icons/icon.png" sizes="32x32">
     <script src="js/navigation.js"></script>
-    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+   
 
 
     <title>Ignite Procurement</title>
@@ -368,6 +368,24 @@ data-reactid=".hbspt-forms-5">
 
 
 
+<!-- 
+<section class="newsletter wrap">
+    <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+    <div class="newsletter-content">
+        <h2>Motta Nyhetsbrev</h2>
+       <h4>Få siste nytt om våre produkter, tjenester og eventer</h4>
+    </div> 
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+    <script>
+     hbspt.forms.create({
+        portalId: "4304957",
+        formId: "b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
+    });
+    </script>--->  
+
+
+    
+</section>
        <!-- Arrow-heading "Jobb hos oss"--->   
        <section class="jobb-hos-oss">   
        <div class="arrow-heading wrap">
@@ -452,9 +470,13 @@ data-reactid=".hbspt-forms-5">
    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="js/navigation.js"></script>
+    <!-- Start of HubSpot Embed Code -->
+    <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4304957.js"></script>
+    <!-- End of HubSpot Embed Code -->
   </body>
 </html>
