--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ data-reactid=".hbspt-forms-5">
     </div>
     <div class="legal-consent-container" data-reactid=".hbspt-forms-5.2">
         <div class="hs-richtext" data-reactid=".hbspt-forms-5.2.2">
-            <p>Når du klikker på meld meg på nedenfor, gir du tillatelse til at Ignite Procurement kan lagre og behandle de personlige opplysningene som ble sendt ovenfor for å gi forespurt innhold. Du kan stoppe abonnementet på denne informasjonen når som
+            <p class="small">Når du klikker på meld meg på nedenfor, gir du tillatelse til at Ignite Procurement kan lagre og behandle de personlige opplysningene som ble sendt ovenfor for å gi forespurt innhold. Du kan stoppe abonnementet på denne informasjonen når som
                 helst. Hvis du vil vite mer om hvordan du stopper abonnement, vennligst se vår <a class="inline" href="https://www.ignite.no/personvernerkl%C3%A6ring/" target="_blank">Personvernerklæring</a>.</p>
         </div>
     </div>
