text edit contact pages, careerpages

--- a/en/career/index.html
+++ b/en/career/index.html
@@ -115,7 +115,7 @@
         <section class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <div class="header-content p-2 flex-fill bd-highlight">
                         <h1>We are growing</h1>
-                        <h4>We are experiencing increased demand for our services and are searching to get in touch with potential new colleagues. Are you smart, data driven and exhibit a strong drive, we would love to hear from you – either you are an experienced procurement professional or software engineer. ​</h4>
+                        <h4>Ignite Procurement is growing and we want to get in touch with potential employees. We are looking for candidates who can strengthen our team within consulting services and software engineers for further development of our software, Ignite Analytics.</h4>
                         
                     </div>
                 <div class="header-content-img p-2 flex-fill bd-highlight">
@@ -127,8 +127,8 @@
               <section class="container wrap">
                   <section class="col-md-7">
                     <div class="">
-                          <h2>Jobs</h2>
-                          <p>We are always looking for good candidates to strengthen our organisation. Please send us an open application and we will contact you.</p>
+                          <h2>Vacancies</h2>
+                          <p>We currently have no available positions, but we are always looking for good candidates to strengthen our organization. Please send us an open application and we will contact you.</p>
                           <a href="mailto:post@ignite.no"><button type="button" class="btn btn-primary btn-lg">Open application</button></a>
                     </div> 
                     <section class="col-md-5"></section>
