--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -267,13 +267,10 @@
            <svg height="50" width="15%">
            <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
            </svg>
-           <h4 class="arrow">Our Employees</h4>         
+           <h4 class="arrow">TEAM</h4>         
         </div>      
             
-   <!-- TEAM-BLOCK--->      
-   <div class="heading-wrap wrap">
-      <h2 class="">Team</h2>
-  </div>    
+   <!-- TEAM-BLOCK--->         
    <section class="team wrap d-flex p-2 flex-wrap justify-content-between">
      <div class="main-contact d-inline-flex p-2 flex-column">
         <img class="contact" src="../../images/team/Sigbjørn_Nome.jpg" alt="Partner" width="250px" height="250px">
@@ -412,8 +409,8 @@
                   <div class="main-contact-info">
                       <h3>Social Media</h3>
                       <div class="contact-wrap">
-                      <a class="social-contact" href="facebook.com">Facebook</a><br>
-                      <a class="social-contact" href="facebook.com">Linkedin</a>
+                          <a class="social-contact" target="blank" href="https://www.facebook.com/igniteprocurement/">Facebook</a><br>
+                          <a class="social-contact" target="blank" href="https://www.linkedin.com/company/ignite-procurement/">Linkedin</a>
                     </div>
                   </div>
                   
