--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
        <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116335094-1"></script>
        <script>
@@ -113,7 +113,7 @@
     <!-- HEADER--->
         <section class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <div class="header-content p-2 flex-fill bd-highlight">
-                        <h1>Discover the power of strategic procurement made digital​</h1>
+                        <h1>Reduce your external spend </h1>
                         <h4>We help you optimize your external spend through our solution Ignite Analytics and our consultants who are experts in strategic sourcing</h4>
                         <a href="https://meetings.hubspot.com/borge-langedal"><button type="button" class="btn btn-primary btn-lg">Book a Demo</button></a>
                         <a href="ignite-analytics/" target="blank"><button type="button" class="btn btn-outline-primary">Find out more</button></a>
