--- a/en/privacy-policy/index.html
+++ b/en/privacy-policy/index.html
@@ -116,17 +116,18 @@
         
 
     <!-- HEADER--->
-        <section class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
+        <section class="wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <section class="col-md-7">
-                  <div class="wrap">
-                        <h1>Privacy Policy</h1>
-                        <h4>Our privacy policy (hyperlink til personvernerklæring) describes how we gather and use personal data when you use or enter into an agreement to use the Services. </h4>
+                  <div class="miniwrap">
+                        <h1>Privacy Policy and our use of cookies</h1>
+                        <h4>Our privacy policy describes how we gather and use personal data when you use or enter into an agreement to use the Services. </h4>
+                        <p class="small"><span style="color:#3c6fe9;">Last updated: 18.12.2018</p>
                   </div> 
 
                      <div class="miniwrap">
                       <h3>Your personal data - your settings </h3>
                       <p>Information you provide us or information we register about you when using our Services, will be used solely for legitimate purposes and in accordance with applicable privacy policies. We safeguard your privacy and the security associated with the use of your information.</p>   
-                      <p>You can make inquiries regarding the processing of personal data to our CTO. (hyperlink til email til CTO) </p>                    
+                      <p>You can make inquiries regarding the processing of personal data to our <a href="mailto:valdemar.rolfsen@ignite.no" class="inline">CTO.</a></p>                    
                     </div>
                      <div class="miniwrap">
                         <h3>Privacy Policy for Ignite Procurement</h3> 
@@ -239,7 +240,7 @@
                            <li>- Require information provided or transferred to a new service provider</li>
                            <li>- Appeal to the Norwegian Data Protection Authority</li>
                          </ul>
-                         <p>You can make inquiries regarding the processing of personal data to<a class="inline" href="mailto:valdemar.rolfsen@ignite.no">our CTO.</a> To ensure that personal data is handed to the right person, we may require that a request for access be made in writing or that the identity is otherwise verified.</p>
+                         <p>You can make inquiries regarding the processing of personal data to our <a class="inline" href="mailto:valdemar.rolfsen@ignite.no"> CTO.</a> To ensure that personal data is handed to the right person, we may require that a request for access be made in writing or that the identity is otherwise verified.</p>
                        </div>
                        <div class="miniwrap">
                          <h3>12. Changes</h3>
