--- a/personvernerklæring/index.html
+++ b/personvernerklæring/index.html
@@ -110,21 +110,22 @@
     <!-- HEADER--->
         <section class="wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center">
                 <section class="col-md-7">
-                  <div class="wrap">
+                  <div class="miniwrap">
                         <h2>Personvernerklæring og vår bruk av cookies</h2>
                         <h4>Følgende personvernerklæring gjelder for Ignite Procurement sitt nettsted, www.ignite.no, og vårt nyhetsbrevprogram.
                           Vår personvernerklæring beskriver hvordan vi samler inn og bruker personopplysninger når du benytter eller inngår avtale om bruk av tjenestene.
                         </h4>
+                        <p class="small"><span style="color:#3c6fe9;">Sist oppdatert: 18.12.2018</p>
                   </div> 
 
                      <div class="miniwrap">
                         <h3>Dine personopplysninger - dine innstillinger</h3>
                         <p>Opplysninger du gir oss eller opplysninger vi registrerer om deg når du bruker våre Tjenester, vil utelukkende bli brukt til legitime formål og i tråd med gjeldende personvernregler. Vi ivaretar ditt personvern og sikkerheten knyttet til bruken av dine opplysninger. </p>
-                        <p>Du kan rette henvendelser vedrørende behandling av personopplysninger til vår CTO. (hyperlink til email til CTO)</p>
+                        <p>Du kan rette henvendelser vedrørende behandling av personopplysninger til vår <a href="mailto:valdemar.rolfsen@ignite.no" class="inline">CTO.</a></p> </p>
                       </div>
 
                       <div class="miniwrap">
-                        <h3>Personvernerklæring for Ignite Procurement (egen nettside)</h3> 
+                        <h3>Personvernerklæring for Ignite Procurement</h3> 
                         <p>Hos Ignite Procurement er vi forpliktet til å beskytte og respektere personvernet ditt. Denne Personvernerklæringen gjelder våre nettsider, påmelding til vårt nyhetsbrev og bruk av Ignite Analytics («Tjenestene»). Personvernerklæringen beskriver hvordan vi samler inn og bruker personopplysninger når du benytter eller inngår avtale om bruk av Tjenestene. 
                         </p>
                         
@@ -236,7 +237,7 @@
                            <li>- Kreve å få opplysninger utlevert eller overført til en ny tjenestetilbyder</li>
                            <li>- Å klage til Datatilsynet </li>
                          </ul>
-                         <p>Du kan rette henvendelser vedrørende behandling av personopplysninger til <a class="inline" href="mailto:valdemar.rolfsen@ignite.no">vår CTO.</a>For å sikre at personopplysninger utleveres til rett person, kan vi stille krav om at begjæring om innsyn skjer skriftlig eller at identitet verifiseres på annen måte.</p>
+                         <p>Du kan rette henvendelser vedrørende behandling av personopplysninger til vår <a class="inline" href="mailto:valdemar.rolfsen@ignite.no">CTO.</a> For å sikre at personopplysninger utleveres til rett person, kan vi stille krav om at begjæring om innsyn skjer skriftlig eller at identitet verifiseres på annen måte.</p>
                        </div>
                        <div class="miniwrap">
                          <h3>12. Endringer </h3>
