--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -239,7 +239,11 @@
           </section>
 
        <!-- CONTACT FORM --->  
+       <section class="wrap">
+          <div class="col-md-6">
+          <h4 class="miniwrap">Please leave us a message through the contact form below, or reach out to one of our team members directly</h4>
         
+          <h3>HHow can we help?</h3>
         
           <section class="wrap">
               <div class="col-md-6">
