--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -157,7 +157,7 @@
                         <div class="left">
                           <div class="details">
                             <h4 class="blue-bold">Børge Langedal</h4>
-                           <h4 class="title">Sales & Marketing Director​</h4>
+                           <h4 class="title">Sales Director​</h4>
                            <a class="phoneto" href="tel:+47 992 38 391"><i class="fas fa-phone"></i>+47 992 38 391</a>
                            <a class="mailto" href="mailto:borge.langedal@ignite.no"><i class="fas fa-envelope"></i>borge.langedal@ignite.no</a>
                            <a class="mailto" href="https://www.linkedin.com/in/b%C3%B8rge-langedal-4ab84b7a/"><i class="fab fa-linkedin-in"></i>Linkedin</a>
@@ -214,7 +214,7 @@
                           <div class="left">
                             <div class="details">
                               <h4 class="blue-bold">Frank-Willie Bødal</h4>
-                             <h4 class="title">Customer Success Director​</h4>
+                             <h4 class="title">Marketing Director​</h4>
                              <a class="phoneto" href="tel:+47 952 60 850"><i class="fas fa-phone"></i>+47 959 98 283</a>
                              <a class="mailto" href="mailto:frank.bodal@ignite.no"><i class="fas fa-envelope"></i>frank.bodal@ignite.no</a>
                              <a class="mailto" href="https://www.linkedin.com/in/frank-willie-b%C3%B8dal-b28bb213b/"><i class="fab fa-linkedin-in"></i>Linkedin</a>
