--- a/contact/index.html
+++ b/contact/index.html
@@ -246,8 +246,6 @@
   
     <h3>Hva kan vi hjelpe deg med?</h3>
 
-
-
     <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
     <script>
      hbspt.forms.create({
@@ -255,9 +253,7 @@
         formId: "5e4401b6-2f12-4b27-92a9-3e7b067448a1"
     });
     </script>
-
-
-
+  </section>
 
 
       <!-- Arrow-heading "Kontaktinformasjon"--->     
