--- a/en/about/index.html
+++ b/en/about/index.html
@@ -140,8 +140,7 @@
                     <p>Our digital platform for strategic procurement, represents the cornerstone of our offering. Combining new technology with a battle-proven approach, our unique solution supports the full strategic procurement cycle – from spend analysis, identification of opportunities and risks, implementation and tracking.​</p>
                     <h4 class="bold">Ignite <span style="color:#31b096;">Academy</h4>
                     <p>We also provide the best practice tips & tricks, online video tutorials, webinars and classroom courses for inspiration and capability development.​</p>
-                    <h4 class="bold">Ignite <span style="color:#ebaf41;">Services</h4>
-                    <p>Med Ignite Services er våre erfarne eksperter klare til å støtte din virksomhet å oppnå deres mål innenfor innkjøp. ​
+                    <h4 class="bold">Ignite <span style="color:#ebaf41;">Services</h4> ​
                     </p>Our experienced procurement experts are ready to support your organization achieve your procurement targets. ​</p>
                   </div>
                 <div class="text-block col-md-6">
