--- a/contact/index.html
+++ b/contact/index.html
@@ -398,7 +398,7 @@
                     <h3>Kontaktinformasjon</h3>
                     <div class="contact-wrap main-contact-info">
                       <a class="phoneto" href="tel:+47 944 88 923"><i class="fas fa-phone"></i>+47 944 88 923</a>
-                      <a class="mailto" href="mailto:sigbjorn.nome@ignite.no "><i class="fas fa-envelope"></i></i>post@ignite.no</a>
+                      <a class="mailto" href="mailto:post@ignite.no "><i class="fas fa-envelope"></i></i>post@ignite.no</a>
                     </div>
                   </div> 
                   <div class="main-contact-info">
