--- a/en/about/index.html
+++ b/en/about/index.html
@@ -141,7 +141,7 @@
                     <h4 class="bold">Ignite <span style="color:#31b096;">Academy</h4>
                     <p>We also provide the best practice tips & tricks, online video tutorials, webinars and classroom courses for inspiration and capability development.​</p>
                     <h4 class="bold">Ignite <span style="color:#ebaf41;">Services</h4> ​
-                    </p>Our experienced procurement experts are ready to support your organization achieve your procurement targets. ​</p>
+                    <p>Our experienced procurement experts are ready to support your organization achieve your procurement targets.</p>
                   </div>
                 <div class="text-block col-md-6">
                   
